archetype: use downstream-parent as parent pom